[package]
name = "mappedpages"
version = "0.2.0"
edition = "2024"
authors = ["William Wu <williamwutq@gmail.com>", "Claude <claude@anthropic.com>"]
license = "MIT"
description = "A fixed-size page provider backed by memory mapping, intended for building higher-level allocators and storage systems"
readme = "README.md"
changelog = "CHANGELOG.md"
repository = "https://github.com/williamwutq/mappedpages"
documentation = "https://docs.rs/mappedpages"
keywords = ["memory-mapping", "allocator", "storage", "pages", "fixed-size"]

[dependencies]
memmap2 = "0.9"
crc32fast = "1"
tokio = { version = "1", optional = true }

[features]
async = ["tokio"]
